Actualizando regex de minutos

--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        " 'youtube']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        " 'status': {'privacyStatus': 'public'}}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        " 'videoOwnerChannelId': 'UCxEgOKuI-n-WOJaNcisHvSg'}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "'Conferencia de prensa matutina, desde Palacio Nacional. Miércoles 14 de abril 2021 | Presidente AMLO.\\n\\n0:00 Inicio de transmisión\\n20:42 Comienza la conferencia de prensa del presidente Andrés Manuel López Obrador\\n\\nDecidimos reforzar la vigilancia en la frontera sur del país con el objetivo de garantizar la seguridad e integridad de las y los niños migrantes. Al ordenar el flujo de personas prevenimos situaciones que ponen en riesgo la vida de los menores y actuamos en congruencia con nuestra convicción de defensa de los derechos humanos. \\n\\nEs muy doloroso que usen a niñas y niños porque si un adulto va acompañado de uno, tiene más posibilidades de obtener la residencia en Estados Unidos. Si detrás de esto hay traficantes que cobran por pasar indocumentados, no podemos permitirlo. \\n\\nLa próxima semana nos reuniremos con gobernadores de Chiapas, Tabasco, Campeche y Quintana Roo y autoridades municipales de la zona fronteriza a fin de fortalecer las acciones dedicadas al cuidado de menores en tránsito. \\n\\nLa titular del Sistema Nacional para el Desarrollo Integral de la Familia (DIF), María del Rocío García Pérez, se encuentra en Tapachula, Chiapas, atendiendo la crisis migratoria.\\n\\nDe acuerdo con información del Gabinete de Seguridad, el pasado martes elementos de la Guardia Nacional efectuaron el rescate de 131 migrantes hondureños y 18 guatemaltecos en Tuxtla Gutiérrez, Chiapas; 28 de ellos eran menores de edad. \\n\\nEl conductor, su acompañante y el vehículo en el que trataban de trasladarlos ilegalmente fueron puestos a disposición de la autoridad y se abrió la carpeta de investigación 009/2021. \\n\\nReafirmamos que la atención al fenómeno migratorio debe darse a través de oportunidades de desarrollo y no con medidas coercitivas. \\n\\nPor parte de México, anualmente se invierten mil 200 millones de dólares en la implementación de Sembrando Vida, programa de reforestación y empleo, en Centroamérica y en el sureste de México con el propósito frenar la migración obligatoria. Actualmente hay más de 400 mil trabajadores del campo inscritos.\\n\\nEsperamos que pronto se cumpla el compromiso del presidente de Estados Unidos, Joseph Biden, sobre la regularización de 11 millones de migrantes que viven y trabajan en ese país desde hace tiempo.\\n\\nCelebramos la fusión entre Televisa y Univisión. De conformidad con las leyes fiscales, por esta operación se pagarán varios miles de millones de pesos de impuestos a la Hacienda pública.\\n\\nMás información: https://bit.ly/32dP5cD \\n\\nSigue las actividades del presidente de México: \\n\\nSitio web:\\nhttp://presidente.gob.mx\\n\\nYouTube:\\nhttps://www.youtube.com/lopezobrador\\n\\nFacebook:\\nhttps://facebook.com/lopezobrador.org.mx\\n\\nTwitter:\\nhttps://twitter.com/lopezobrador_\\n\\nInstagram:\\nhttps://www.instagram.com/lopezobrador/\\n\\nTelegram: \\nhttps://t.me/PresidenteAMLO\\n\\nSpotify:\\nhttps://spoti.fi/2C7jUmx'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
     "    \"\\n\": \" \", \n",
     "\n",
     "    # Borra los saltos a minutos en YouTube:\n",
-    "    \"[0-9]?[0-9]:[0-9][0-9]\": \"\", \n",
+    "    \"[0-9]?[0-9]?:[0-9][0-9]\": \"\", \n",
     "\n",
     "    # Borra cualquier link de internet:\n",
     "    \"http(s)?://[a-zA-Z0-9./?=_-]+\": \"\",\n",
@@ -549,7 +549,7 @@
     "    \"Inicio de transmisión\": \"\",\n",
     "    \"Comienza la conferencia de prensa del presidente Andrés Manuel López Obrador\": \"\",\n",
     "\n",
-    "\n",
+    "    # Los espacios dobles se reemplazan por un solo espacio\n",
     "    \"  +\": \" \"\n",
     "\n",
     "}   "
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "' Decidimos reforzar la vigilancia en la frontera sur del país con el objetivo de garantizar la seguridad e integridad de las y los niños migrantes. Al ordenar el flujo de personas prevenimos situaciones que ponen en riesgo la vida de los menores y actuamos en congruencia con nuestra convicción de defensa de los derechos humanos. Es muy doloroso que usen a niñas y niños porque si un adulto va acompañado de uno, tiene más posibilidades de obtener la residencia en Estados Unidos. Si detrás de esto hay traficantes que cobran por pasar indocumentados, no podemos permitirlo. La próxima semana nos reuniremos con gobernadores de Chiapas, Tabasco, Campeche y Quintana Roo y autoridades municipales de la zona fronteriza a fin de fortalecer las acciones dedicadas al cuidado de menores en tránsito. La titular del Sistema Nacional para el Desarrollo Integral de la Familia (DIF), María del Rocío García Pérez, se encuentra en Tapachula, Chiapas, atendiendo la crisis migratoria. De acuerdo con información del Gabinete de Seguridad, el pasado martes elementos de la Guardia Nacional efectuaron el rescate de 131 migrantes hondureños y 18 guatemaltecos en Tuxtla Gutiérrez, Chiapas; 28 de ellos eran menores de edad. El conductor, su acompañante y el vehículo en el que trataban de trasladarlos ilegalmente fueron puestos a disposición de la autoridad y se abrió la carpeta de investigación 009/2021. Reafirmamos que la atención al fenómeno migratorio debe darse a través de oportunidades de desarrollo y no con medidas coercitivas. Por parte de México, anualmente se invierten mil 200 millones de dólares en la implementación de Sembrando Vida, programa de reforestación y empleo, en Centroamérica y en el sureste de México con el propósito frenar la migración obligatoria. Actualmente hay más de 400 mil trabajadores del campo inscritos. Esperamos que pronto se cumpla el compromiso del presidente de Estados Unidos, Joseph Biden, sobre la regularización de 11 millones de migrantes que viven y trabajan en ese país desde hace tiempo. Celebramos la fusión entre Televisa y Univisión. De conformidad con las leyes fiscales, por esta operación se pagarán varios miles de millones de pesos de impuestos a la Hacienda pública. '"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
        "Name: published_at, Length: 1099, dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Fin de la emergencia sanitaria por COVID-19 en...</td>\n",
-       "      <td>:07 Anuncio del fin de la emergencia sanitari...</td>\n",
+       "      <td>Anuncio del fin de la emergencia sanitaria po...</td>\n",
        "      <td>2023-05-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -808,7 +808,7 @@
        "0                                                        2023-05-12  \n",
        "1      Fomento al deporte a través del Programa de M...  2023-05-11  \n",
        "2      Reporte sobre noticias falsas Sesión de pregu...  2023-05-10  \n",
-       "3      :07 Anuncio del fin de la emergencia sanitari...  2023-05-09  \n",
+       "3      Anuncio del fin de la emergencia sanitaria po...  2023-05-09  \n",
        "4      Comparativo de marcas y precios de combustibl...  2023-05-08  \n",
        "...                                                 ...         ...  \n",
        "1094   Hoy destacamos la conformación de un sistema ...  2019-03-08  \n",
@@ -820,7 +820,7 @@
        "[1099 rows x 3 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "Name: clean_dates, Length: 1099, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
        "    <tr>\n",
        "      <th>2023-05-09</th>\n",
        "      <td>Fin de la emergencia sanitaria por COVID-19 en...</td>\n",
-       "      <td>:07 Anuncio del fin de la emergencia sanitari...</td>\n",
+       "      <td>Anuncio del fin de la emergencia sanitaria po...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-05-08</th>\n",
@@ -994,7 +994,7 @@
        "2023-05-12                                                      \n",
        "2023-05-11    Fomento al deporte a través del Programa de M...  \n",
        "2023-05-10    Reporte sobre noticias falsas Sesión de pregu...  \n",
-       "2023-05-09    :07 Anuncio del fin de la emergencia sanitari...  \n",
+       "2023-05-09    Anuncio del fin de la emergencia sanitaria po...  \n",
        "2023-05-08    Comparativo de marcas y precios de combustibl...  \n",
        "...                                                        ...  \n",
        "2019-03-08    Hoy destacamos la conformación de un sistema ...  \n",
@@ -1006,7 +1006,7 @@
        "[1099 rows x 2 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
        "[219 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "[219 rows x 2 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
