--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        " 'youtube']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        " 'status': {'privacyStatus': 'public'}}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        " 'videoOwnerChannelId': 'UCxEgOKuI-n-WOJaNcisHvSg'}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -382,11 +382,11 @@
       "3     2023-05-10T12:50:23Z  Homenaje a las madres de México en su día. Con...   \n",
       "4     2023-05-09T12:47:41Z  Fin de la emergencia sanitaria por COVID-19 en...   \n",
       "...                    ...                                                ...   \n",
-      "1094  2019-03-08T21:59:25Z          Iniciamos la semana dialogando con medios   \n",
       "1095  2019-03-08T21:59:25Z  Conferencia matutina: Avances del Gabinete de ...   \n",
       "1096  2019-03-08T21:59:25Z  Hoy anunciamos la terna de candidatos a minist...   \n",
       "1097  2019-03-08T21:59:25Z  Tercera conferencia de prensa matutina desde P...   \n",
       "1098  2019-03-08T21:59:25Z     Diálogo con periodistas desde Palacio Nacional   \n",
+      "1099  2019-03-08T21:59:25Z  Primera conferencia de prensa matutina desde P...   \n",
       "\n",
       "                                            description  \n",
       "0     Conferencia de prensa matutina, desde Palacio ...  \n",
@@ -395,13 +395,13 @@
       "3     Conferencia de prensa matutina, desde Palacio ...  \n",
       "4     Conferencia de prensa matutina, desde Palacio ...  \n",
       "...                                                 ...  \n",
-      "1094  Esta mañana dimos a conocer el trabajo coordin...  \n",
       "1095  Conferencia de prensa matutina, desde Palacio ...  \n",
       "1096  Cuarta conferencia de prensa matutina desde el...  \n",
       "1097  Tercera conferencia de prensa matutina desde e...  \n",
       "1098  Segunda conferencia de prensa matutina del pre...  \n",
+      "1099  Andrés Manuel López Obrador ofrece su primera ...  \n",
       "\n",
-      "[1099 rows x 3 columns]\n"
+      "[1100 rows x 3 columns]\n"
      ]
     }
    ],
@@ -418,7 +418,7 @@
     "    data.append([published_at, title, description])\n",
     "    \n",
     "df = pd.DataFrame(data, columns=['published_at', 'title', 'description'])\n",
-    "df = df.head(1099)\n",
+    "df = df.head(1100)\n",
     "\n",
     "print(df)\n"
    ]
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "'Conferencia de prensa matutina, desde Palacio Nacional. Jueves 15 de abril 2021 | Presidente AMLO.\\n\\n0:00 Inicio de transmisión\\n14:49 Comienza la conferencia de prensa del presidente Andrés Manuel López Obrador\\n16:00 Sesión de preguntas y respuestas\\n\\nCelebramos la llegada de dos embarques de vacunas contra #COVID19 a la Ciudad de México; 500 mil dosis de la vacuna SinoVac y 487 mil 500 de Pfizer BioNTech.\\n\\nSe utilizarán para aplicar segundas dosis y vacunar a personas de 50 a 59 años. Mañana informaremos sobre la vacunación al personal educativo de escuelas públicas y privadas para regresar a clases presenciales antes de terminar el ciclo escolar, teniendo claro que el retorno a las aulas será voluntario. \\n\\nCon las 987 mil 500 que hoy recibimos, México suma un total de 17 millones 888 mil 350 dosis de las vacunas Cansino, Sputnik V, Sinovac, AstraZeneca y Pfizer. \\n\\nLas 32 entidades federativas ya cuentan con las dosis necesarias para terminar la vacunación a adultos mayores durante el mes de abril. \\n\\nEstamos satisfechos con la actuación de la Guardia Nacional, congruente con los principios de rechazo a la violencia de género. Los valores de esta institución y de las Fuerzas Armadas permitirán acercarlas más al pueblo. Unidad y cero tolerancia a los casos de agresiones, abuso de autoridad y corrupción.\\n\\nMás información: https://bit.ly/3uSEEHQ \\n\\nSigue las actividades del presidente de México: \\n\\nSitio web:\\nhttp://presidente.gob.mx\\n\\nYouTube:\\nhttps://www.youtube.com/lopezobrador\\n\\nFacebook:\\nhttps://facebook.com/lopezobrador.org.mx\\n\\nTwitter:\\nhttps://twitter.com/lopezobrador_\\n\\nInstagram:\\nhttps://www.instagram.com/lopezobrador/\\n\\nTelegram: \\nhttps://t.me/PresidenteAMLO\\n\\nSpotify:\\nhttps://spoti.fi/2C7jUmx'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "' Sesión de preguntas y respuestas Celebramos la llegada de dos embarques de vacunas contra a la Ciudad de México; 500 mil dosis de la vacuna SinoVac y 487 mil 500 de Pfizer BioNTech. Se utilizarán para aplicar segundas dosis y vacunar a personas de 50 a 59 años. Mañana informaremos sobre la vacunación al personal educativo de escuelas públicas y privadas para regresar a clases presenciales antes de terminar el ciclo escolar, teniendo claro que el retorno a las aulas será voluntario. Con las 987 mil 500 que hoy recibimos, México suma un total de 17 millones 888 mil 350 dosis de las vacunas Cansino, Sputnik V, Sinovac, AstraZeneca y Pfizer. Las 32 entidades federativas ya cuentan con las dosis necesarias para terminar la vacunación a adultos mayores durante el mes de abril. Estamos satisfechos con la actuación de la Guardia Nacional, congruente con los principios de rechazo a la violencia de género. Los valores de esta institución y de las Fuerzas Armadas permitirán acercarlas más al pueblo. Unidad y cero tolerancia a los casos de agresiones, abuso de autoridad y corrupción. '"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -635,15 +635,15 @@
        "3       2023-05-10T12:50:23Z\n",
        "4       2023-05-09T12:47:41Z\n",
        "                ...         \n",
-       "1094    2019-03-08T21:59:25Z\n",
        "1095    2019-03-08T21:59:25Z\n",
        "1096    2019-03-08T21:59:25Z\n",
        "1097    2019-03-08T21:59:25Z\n",
        "1098    2019-03-08T21:59:25Z\n",
-       "Name: published_at, Length: 1099, dtype: object"
+       "1099    2019-03-08T21:59:25Z\n",
+       "Name: published_at, Length: 1100, dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -768,12 +768,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1094</th>\n",
-       "      <td>Iniciamos la semana dialogando con medios</td>\n",
-       "      <td>Esta mañana dimos a conocer el trabajo coordin...</td>\n",
-       "      <td>2019-03-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1095</th>\n",
        "      <td>Conferencia matutina: Avances del Gabinete de ...</td>\n",
        "      <td>Hoy destacamos la conformación de un sistema ...</td>\n",
@@ -797,9 +791,15 @@
        "      <td>Segunda conferencia de prensa matutina del pre...</td>\n",
        "      <td>2019-03-08</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1099</th>\n",
+       "      <td>Primera conferencia de prensa matutina desde P...</td>\n",
+       "      <td>Andrés Manuel López Obrador ofrece su primera ...</td>\n",
+       "      <td>2019-03-08</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1099 rows × 3 columns</p>\n",
+       "<p>1100 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -810,11 +810,11 @@
        "3     Homenaje a las madres de México en su día. Con...   \n",
        "4     Fin de la emergencia sanitaria por COVID-19 en...   \n",
        "...                                                 ...   \n",
-       "1094          Iniciamos la semana dialogando con medios   \n",
        "1095  Conferencia matutina: Avances del Gabinete de ...   \n",
        "1096  Hoy anunciamos la terna de candidatos a minist...   \n",
        "1097  Tercera conferencia de prensa matutina desde P...   \n",
        "1098     Diálogo con periodistas desde Palacio Nacional   \n",
+       "1099  Primera conferencia de prensa matutina desde P...   \n",
        "\n",
        "                                            description clean_dates  \n",
        "0      Comparativo de marcas y precios de combustibl...  2023-05-15  \n",
@@ -823,16 +823,16 @@
        "3      Reporte sobre noticias falsas Sesión de pregu...  2023-05-10  \n",
        "4      Anuncio del fin de la emergencia sanitaria po...  2023-05-09  \n",
        "...                                                 ...         ...  \n",
-       "1094  Esta mañana dimos a conocer el trabajo coordin...  2019-03-08  \n",
        "1095   Hoy destacamos la conformación de un sistema ...  2019-03-08  \n",
        "1096  Cuarta conferencia de prensa matutina desde el...  2019-03-08  \n",
        "1097  Tercera conferencia de prensa matutina desde e...  2019-03-08  \n",
        "1098  Segunda conferencia de prensa matutina del pre...  2019-03-08  \n",
+       "1099  Andrés Manuel López Obrador ofrece su primera ...  2019-03-08  \n",
        "\n",
-       "[1099 rows x 3 columns]"
+       "[1100 rows x 3 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -855,15 +855,15 @@
        "3      2023-05-10\n",
        "4      2023-05-09\n",
        "          ...    \n",
-       "1094   2019-03-08\n",
        "1095   2019-03-08\n",
        "1096   2019-03-08\n",
        "1097   2019-03-08\n",
        "1098   2019-03-08\n",
-       "Name: clean_dates, Length: 1099, dtype: datetime64[ns]"
+       "1099   2019-03-08\n",
+       "Name: clean_dates, Length: 1100, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -958,11 +958,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-03-08</th>\n",
-       "      <td>Iniciamos la semana dialogando con medios</td>\n",
-       "      <td>Esta mañana dimos a conocer el trabajo coordin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-03-08</th>\n",
        "      <td>Conferencia matutina: Avances del Gabinete de ...</td>\n",
        "      <td>Hoy destacamos la conformación de un sistema ...</td>\n",
        "    </tr>\n",
@@ -981,9 +976,14 @@
        "      <td>Diálogo con periodistas desde Palacio Nacional</td>\n",
        "      <td>Segunda conferencia de prensa matutina del pre...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-08</th>\n",
+       "      <td>Primera conferencia de prensa matutina desde P...</td>\n",
+       "      <td>Andrés Manuel López Obrador ofrece su primera ...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1099 rows × 2 columns</p>\n",
+       "<p>1100 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -995,11 +995,11 @@
        "2023-05-10   Homenaje a las madres de México en su día. Con...   \n",
        "2023-05-09   Fin de la emergencia sanitaria por COVID-19 en...   \n",
        "...                                                        ...   \n",
-       "2019-03-08           Iniciamos la semana dialogando con medios   \n",
        "2019-03-08   Conferencia matutina: Avances del Gabinete de ...   \n",
        "2019-03-08   Hoy anunciamos la terna de candidatos a minist...   \n",
        "2019-03-08   Tercera conferencia de prensa matutina desde P...   \n",
        "2019-03-08      Diálogo con periodistas desde Palacio Nacional   \n",
+       "2019-03-08   Primera conferencia de prensa matutina desde P...   \n",
        "\n",
        "                                                   description  \n",
        "clean_dates                                                     \n",
@@ -1009,16 +1009,16 @@
        "2023-05-10    Reporte sobre noticias falsas Sesión de pregu...  \n",
        "2023-05-09    Anuncio del fin de la emergencia sanitaria po...  \n",
        "...                                                        ...  \n",
-       "2019-03-08   Esta mañana dimos a conocer el trabajo coordin...  \n",
        "2019-03-08    Hoy destacamos la conformación de un sistema ...  \n",
        "2019-03-08   Cuarta conferencia de prensa matutina desde el...  \n",
        "2019-03-08   Tercera conferencia de prensa matutina desde e...  \n",
        "2019-03-08   Segunda conferencia de prensa matutina del pre...  \n",
+       "2019-03-08   Andrés Manuel López Obrador ofrece su primera ...  \n",
        "\n",
-       "[1099 rows x 2 columns]"
+       "[1100 rows x 2 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,7 @@
        "[220 rows x 2 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
        "[220 rows x 2 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
