conclusion del analisis PCA

--- a/TopicPredicton.ipynb
+++ b/TopicPredicton.ipynb
@@ -1162,6 +1162,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Como podemos ver del análisis de componentes principales, no podemos sacar ninguna conclusión sobre la cantidad de tópicos del corpus. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Estandarizamos la matriz para meterla al LDA"
    ]
   },
