--- a/TopicPredicton.ipynb
+++ b/TopicPredicton.ipynb
@@ -1415,6 +1415,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LDA intento 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 197,
    "metadata": {},
@@ -1493,11 +1501,212 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### LDA intento 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "completo cada\n",
+      "envasado\n",
+      "epidemia continuar\n",
+      "consolidacion proyecto\n",
+      "democratico respetar\n",
+      "sader\n",
+      "servicio coordinacion\n",
+      "dar visto\n",
+      "respuesta continuar\n",
+      "disminucion presupuesto\n",
+      "THE TOP 15 WORDS FOR TOPIC #0\n",
+      "['cada', 'cuarta transformacion', 'enfrentar problema', 'anunciar', 'sesion pregunta respuesta', 'sesion pregunta', 'sesion', 'inversion', 'pregunta', 'pregunta respuesta', 'asunto', 'cooperacion', 'recibir', 'representar', 'dos']\n",
+      "\n",
+      "\n",
+      "THE TOP 15 WORDS FOR TOPIC #1\n",
+      "['informamos', 'proceso', 'necesario', 'gente', 'realizar', 'sector', 'sesion pregunta respuesta', 'sesion pregunta', 'sesion', 'asi', 'marca precio combustibl', 'pregunta respuesta', 'pregunta', 'epidemia', 'continuar']\n",
+      "\n",
+      "\n",
+      "THE TOP 15 WORDS FOR TOPIC #2\n",
+      "['llegar', 'importante', 'cardiaco', 'partir', 'conformidad', 'instalacion estrategico', 'constancia', 'informar', 'empresa', 'si', 'situacion', 'final', 'ley', 'deber', 'hoy mismo']\n",
+      "\n",
+      "\n",
+      "THE TOP 15 WORDS FOR TOPIC #3\n",
+      "['gobierno federal', 'avances', 'construccion proyecto', 'politico', 'construccion proyecto estrategico', 'municipio', 'partir', 'avances construccion proyecto', 'avances construccion', 'marca precio combustibl', 'sesion pregunta', 'sesion pregunta respuesta', 'sesion', 'pregunta', 'pregunta respuesta']\n",
+      "\n",
+      "\n",
+      "THE TOP 15 WORDS FOR TOPIC #4\n",
+      "['construccion proyecto estrategico', 'partir', 'marca precio combustibl', 'ciudad mexico', 'ciudad', 'deber', 'aislar', 'atender', 'sesion pregunta respuesta', 'sesion pregunta', 'sesion', 'determinacion', 'estrategico', 'pregunta', 'pregunta respuesta']\n",
+      "\n",
+      "\n",
+      "THE TOP 15 WORDS FOR TOPIC #5\n",
+      "['dos', 'sesion', 'total mil', 'internacional', 'ir', 'comunidad', 'educacion', 'municipal', 'articulo constitucional', 'futuro', 'tendencia', 'derecho', 'inversion', 'cada', 'bajo']\n",
+      "\n",
+      "\n",
+      "THE TOP 15 WORDS FOR TOPIC #6\n",
+      "['gestion necesario', 'abc', 'lograr', 'entregamos condecoracion', 'mejor', 'relacion', 'gabinete', 'comision', 'paz', 'humanos', 'derechos humanos', 'informamos', 'derechos', 'guarderia', 'guarderia abc']\n",
+      "\n",
+      "\n",
+      "THE TOP 15 WORDS FOR TOPIC #7\n",
+      "['guardia nacional', 'politico', 'reporte', 'fin', 'destinar', 'querer', 'jubilado', 'compromiso', 'asi', 'mil millon peso', 'flujo migratorio', 'iniciar', 'pueblos', 'buen', 'sistema']\n",
+      "\n",
+      "\n",
+      "THE TOP 15 WORDS FOR TOPIC #8\n",
+      "['mejia berdeja exponer', 'rescate trabajador', 'rescate trabajador mina', 'impunidad', 'marca precio combustibl', 'reporte', 'comparativo marca precio', 'comparativo marca', 'marca precio', 'sesion', 'sesion pregunta respuesta', 'sesion pregunta', 'comparativo', 'pregunta respuesta', 'pregunta']\n",
+      "\n",
+      "\n",
+      "THE TOP 15 WORDS FOR TOPIC #9\n",
+      "['recibir', 'covid', 'centro', 'sesion pregunta respuesta', 'sesion pregunta', 'sesion', 'mismo', 'pregunta', 'pregunta respuesta', 'mil millon peso', 'delito alto impacto', 'delito alto', 'entidad', 'mejorar sistema', 'gobierno federal']\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition import LatentDirichletAllocation\n",
+    "import random\n",
+    "LDA = LatentDirichletAllocation(n_components=10,random_state=42)\n",
+    "LDA.fit(vectFitScaled)\n",
+    "\n",
+    "len(vect.get_feature_names_out())\n",
+    "\n",
+    "for i in range(10):\n",
+    "    random_word_id = random.randint(0,31463)\n",
+    "    print(vect.get_feature_names_out()[random_word_id])\n",
+    "\n",
+    "single_topic = LDA.components_[0]\n",
+    "for index,topic in enumerate(LDA.components_):\n",
+    "    print(f'THE TOP 15 WORDS FOR TOPIC #{index}')\n",
+    "    print([vect.get_feature_names_out()[i] for i in topic.argsort()[-15:]])\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>Topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hoy conmemorar lucha mujer igualdad violencio ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>hoy dar conocer analisis reciente aprobacion t...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hoy dar conocer firmamo carta compromiso somet...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hoy informamos accion mejorar mecanismo protec...</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>gobierno mexico avanzar entusiasmo poblacion r...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>comparativo marca precio combustibl comparativ...</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>comparativo marca precio combustibl comparativ...</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>comparativo marca precio combustibl comparativ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>comparativo marca precio combustibl comparativ...</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>comparativo marca precio combustibl comparativ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>220 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           description  Topic\n",
+       "0    hoy conmemorar lucha mujer igualdad violencio ...      0\n",
+       "1    hoy dar conocer analisis reciente aprobacion t...      2\n",
+       "2    hoy dar conocer firmamo carta compromiso somet...      4\n",
+       "3    hoy informamos accion mejorar mecanismo protec...      7\n",
+       "4    gobierno mexico avanzar entusiasmo poblacion r...      5\n",
+       "..                                                 ...    ...\n",
+       "215  comparativo marca precio combustibl comparativ...      6\n",
+       "216  comparativo marca precio combustibl comparativ...      7\n",
+       "217  comparativo marca precio combustibl comparativ...      1\n",
+       "218  comparativo marca precio combustibl comparativ...      7\n",
+       "219  comparativo marca precio combustibl comparativ...      1\n",
+       "\n",
+       "[220 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "topic_results = LDA.transform(vectFitStandardized)\n",
+    "textoPrueba['Topic'] = topic_results.argmax(axis=1)\n",
+    "\n",
+    "display(textoPrueba)"
+   ]
   }
  ],
  "metadata": {
