LDA comentado y primer intento LDAvis

--- a/TopicPredicton.ipynb
+++ b/TopicPredicton.ipynb
@@ -1510,23 +1510,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "completo cada\n",
-      "envasado\n",
-      "epidemia continuar\n",
-      "consolidacion proyecto\n",
-      "democratico respetar\n",
-      "sader\n",
-      "servicio coordinacion\n",
-      "dar visto\n",
-      "respuesta continuar\n",
-      "disminucion presupuesto\n",
+      "mantener relacion entendimiento\n",
+      "pueblo gente humilde\n",
+      "propagacion\n",
+      "numero nivel\n",
+      "accion comision\n",
+      "eje\n",
+      "campaña prevenir consumo\n",
+      "poner\n",
+      "dia internacional mujer\n",
+      "bruto pib\n",
       "THE TOP 15 WORDS FOR TOPIC #0\n",
       "['cada', 'cuarta transformacion', 'enfrentar problema', 'anunciar', 'sesion pregunta respuesta', 'sesion pregunta', 'sesion', 'inversion', 'pregunta', 'pregunta respuesta', 'asunto', 'cooperacion', 'recibir', 'representar', 'dos']\n",
       "\n",
@@ -1573,25 +1573,34 @@
    "source": [
     "from sklearn.decomposition import LatentDirichletAllocation\n",
     "import random\n",
-    "LDA = LatentDirichletAllocation(n_components=10,random_state=42)\n",
+    "\n",
+    "# Crear una instancia de LatentDirichletAllocation con 10 componentes y un estado aleatorio de 42\n",
+    "LDA = LatentDirichletAllocation(n_components=10, random_state=42)\n",
+    "\n",
+    "# Ajustar el modelo LDA a la matriz de vectores TF-IDF escalados (vectFitScaled)\n",
     "LDA.fit(vectFitScaled)\n",
     "\n",
+    "# Obtener la longitud de la lista de palabras clave (features) de la vectorización\n",
     "len(vect.get_feature_names_out())\n",
     "\n",
+    "# Imprimir 10 palabras clave aleatorias\n",
     "for i in range(10):\n",
-    "    random_word_id = random.randint(0,31463)\n",
+    "    random_word_id = random.randint(0, 31463)\n",
     "    print(vect.get_feature_names_out()[random_word_id])\n",
     "\n",
+    "# Obtener las palabras clave más importantes para el primer tópico\n",
     "single_topic = LDA.components_[0]\n",
-    "for index,topic in enumerate(LDA.components_):\n",
+    "\n",
+    "# Recorrer todos los tópicos y obtener las palabras clave más importantes para cada uno\n",
+    "for index, topic in enumerate(LDA.components_):\n",
     "    print(f'THE TOP 15 WORDS FOR TOPIC #{index}')\n",
     "    print([vect.get_feature_names_out()[i] for i in topic.argsort()[-15:]])\n",
-    "    print('\\n')"
+    "    print('\\n')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1702,10 +1711,60 @@
     }
    ],
    "source": [
+    "\n",
+    "# Obtener las probabilidades de los tópicos para cada documento\n",
     "topic_results = LDA.transform(vectFitStandardized)\n",
+    "\n",
+    "# Asignar el tópico dominante a cada documento\n",
     "textoPrueba['Topic'] = topic_results.argmax(axis=1)\n",
     "\n",
+    "# Mostrar el dataframe con la columna \"Topic\" agregada\n",
     "display(textoPrueba)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LDA vis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'TfidfVectorizer' object has no attribute 'get_feature_names'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[38], line 9\u001b[0m\n\u001b[0;32m      5\u001b[0m get_feature_names \u001b[39m=\u001b[39m vect\u001b[39m.\u001b[39mget_feature_names_out()\n\u001b[0;32m      8\u001b[0m \u001b[39m# Crear un objeto LDAvis\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m lda_vis \u001b[39m=\u001b[39m pyLDAvis\u001b[39m.\u001b[39;49msklearn\u001b[39m.\u001b[39;49mprepare(LDA, vectFit, vect)\n\u001b[0;32m     11\u001b[0m \u001b[39m# Mostrar el LDAvis en un gráfico interactivo\u001b[39;00m\n\u001b[0;32m     12\u001b[0m pyLDAvis\u001b[39m.\u001b[39mdisplay(lda_vis)\n",
+      "File \u001b[1;32mc:\\Users\\julio\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyLDAvis\\sklearn.py:94\u001b[0m, in \u001b[0;36mprepare\u001b[1;34m(lda_model, dtm, vectorizer, **kwargs)\u001b[0m\n\u001b[0;32m     62\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mprepare\u001b[39m(lda_model, dtm, vectorizer, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m     63\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Create Prepared Data from sklearn's LatentDirichletAllocation and CountVectorizer.\u001b[39;00m\n\u001b[0;32m     64\u001b[0m \n\u001b[0;32m     65\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[39m    See `pyLDAvis.prepare` for **kwargs.\u001b[39;00m\n\u001b[0;32m     93\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 94\u001b[0m     opts \u001b[39m=\u001b[39m fp\u001b[39m.\u001b[39mmerge(_extract_data(lda_model, dtm, vectorizer), kwargs)\n\u001b[0;32m     95\u001b[0m     \u001b[39mreturn\u001b[39;00m pyLDAvis\u001b[39m.\u001b[39mprepare(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mopts)\n",
+      "File \u001b[1;32mc:\\Users\\julio\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyLDAvis\\sklearn.py:38\u001b[0m, in \u001b[0;36m_extract_data\u001b[1;34m(lda_model, dtm, vectorizer)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_extract_data\u001b[39m(lda_model, dtm, vectorizer):\n\u001b[1;32m---> 38\u001b[0m     vocab \u001b[39m=\u001b[39m _get_vocab(vectorizer)\n\u001b[0;32m     39\u001b[0m     doc_lengths \u001b[39m=\u001b[39m _get_doc_lengths(dtm)\n\u001b[0;32m     40\u001b[0m     term_freqs \u001b[39m=\u001b[39m _get_term_freqs(dtm)\n",
+      "File \u001b[1;32mc:\\Users\\julio\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyLDAvis\\sklearn.py:20\u001b[0m, in \u001b[0;36m_get_vocab\u001b[1;34m(vectorizer)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_get_vocab\u001b[39m(vectorizer):\n\u001b[1;32m---> 20\u001b[0m     \u001b[39mreturn\u001b[39;00m vectorizer\u001b[39m.\u001b[39;49mget_feature_names()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TfidfVectorizer' object has no attribute 'get_feature_names'"
+     ]
+    }
+   ],
+   "source": [
+    "import pyLDAvis.sklearn\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Crear un objeto LDAvis\n",
+    "lda_vis = pyLDAvis.sklearn.prepare(LDA, vectFit, vect)\n",
+    "\n",
+    "# Mostrar el LDAvis en un gráfico interactivo\n",
+    "pyLDAvis.display(lda_vis)\n",
+    "\n",
+    "# Guardar el LDAvis como archivo HTML\n",
+    "pyLDAvis.save_html(lda_vis, 'lda_vis.html')\n",
+    "\n",
+    "# Visualizar el LDAvis en una ventana emergente (requiere matplotlib)\n",
+    "pyLDAvis.show(lda_vis)"
    ]
   }
  ],
