topico mas y menos recurrente

--- a/TopicPredicton.ipynb
+++ b/TopicPredicton.ipynb
@@ -2888,12 +2888,92 @@
     "# Obtener la distribución de tópicos para cada documento\n",
     "topic_distribution = LDA.transform(vectFitStandardized)\n",
     "\n",
-    "# Agregar la distribución de tópicos como columnas en el DataFrame textoPrueba\n",
+    "# Agregar la distribución de tópicos como columnas en el DataFrame df\n",
     "for i in range(topic_distribution.shape[1]):\n",
     "    df[f'Topic_{i}'] = topic_distribution[:, i]\n",
     "\n",
     "# Mostrar el dataframe con la columna \"Topic\" agregada\n",
     "display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topic_distribution.shape[1]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Porcentaje de importancia de cada tópico  por todas las semanas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tópico 0: 15.172\n",
+      "tópico 1: 12.96\n",
+      "tópico 2: 12.732\n",
+      "tópico 3: 12.066\n",
+      "tópico 4: 8.929\n",
+      "tópico 5: 15.018\n",
+      "tópico 6: 10.111\n",
+      "tópico 7: 10.091\n",
+      "tópico 8: 13.151\n",
+      "tópico 9: 14.293\n",
+      "tópico 10: 20.288\n",
+      "tópico 11: 16.057\n",
+      "tópico 12: 15.731\n",
+      "tópico 13: 14.083\n",
+      "tópico 14: 15.207\n",
+      "tópico 15: 14.111\n",
+      "El tópico 4 fue el menos recurrente.\n",
+      "El tópico 10 fue el más recurrente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {}  \n",
+    "\n",
+    "for i in range(topic_distribution.shape[1]):\n",
+    "    key = f\"tópico {i}\"  \n",
+    "    value = df[f'Topic_{i}'].sum()  \n",
+    "    my_dict[key] = value  \n",
+    "\n",
+    "# Print all the keys and values\n",
+    "for key, value in my_dict.items():\n",
+    "    print(str(key) + \": \" + str(round(value,3)))\n",
+    "\n",
+    "# Find the lowest and highest values\n",
+    "lowest_value = min(my_dict.values())\n",
+    "lowest_key = min(my_dict, key=my_dict.get)\n",
+    "highest_value = max(my_dict.values())\n",
+    "highest_key = max(my_dict, key=my_dict.get)\n",
+    "\n",
+    "print(\"El \" + str(lowest_key) + \" fue el menos recurrente.\")\n",
+    "print(\"El \" + str(highest_key) + \" fue el más recurrente.\")"
    ]
   },
   {
